// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffField renders a boolean field 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Text
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned sixteen wide"
        >
          <span>
            <span
              class="deletion"
            >
              true
            </span>
            <span
              class="addition"
            >
              false
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DiffField renders a boolean field with inverse values 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Text
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned sixteen wide"
        >
          <span>
            <span
              class="deletion"
            >
              false
            </span>
            <span
              class="addition"
            >
              true
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DiffField renders a datetime field 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Text
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned sixteen wide"
        >
          <span>
            <span>
              Sunday, April 23, 2017 3:38 AM
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DiffField renders a diff field in split mode 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Title
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned eight wide"
        >
          <span>
            <span>
              My 
            </span>
            <span
              class="deletion"
            >
              old
            </span>
            <span>
               string
            </span>
          </span>
        </td>
        <td
          class="top aligned eight wide"
        >
          <span>
            <span>
              My 
            </span>
            <span
              class="addition"
            >
              new
            </span>
            <span>
               string
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DiffField renders a diff field in unified mode 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Title
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned sixteen wide"
        >
          <span>
            <span>
              My 
            </span>
            <span
              class="deletion"
            >
              old
            </span>
            <span
              class="addition"
            >
              new
            </span>
            <span>
               string
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DiffField renders a richtext field 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Text
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned sixteen wide"
        >
          <span>
            <span>
              My 
            </span>
            <span
              class="deletion"
            >
              old
            </span>
            <span
              class="addition"
            >
              new
            </span>
            <span>
               string
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DiffField renders a textarea field 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Text
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned sixteen wide"
        >
          <span>
            <span>
              My 
            </span>
            <span
              class="deletion"
            >
              old
            </span>
            <span
              class="addition"
            >
              new
            </span>
            <span>
               string
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DiffField renders an array field 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Text
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned sixteen wide"
        >
          <span>
            <span>
              one,
            </span>
            <span
              class="deletion"
            >
              two
            </span>
            <span
              class="addition"
            >
              three
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DiffField renders an array of objects field 1`] = `
<div>
  <table
    class="ui compact table"
    data-testid="DiffField"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
          colspan="2"
        >
          Text
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="top aligned sixteen wide"
        >
          <span>
            <span>
              one,
            </span>
            <span
              class="deletion"
            >
              two
            </span>
            <span
              class="addition"
            >
              three
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
